derive/tests/behavior/02-wrong-usage.rs
// Copyright © 2025 Stephan Kunz

//! Test wrong usage of behavior derive macro `Behavior` 

#[behaviortree_derive::Behavior]
struct TestBehavior;

// dummy main
fn main(){}
